<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginHorizontal="@dimen/_15sdp"
    android:background="@drawable/shape_dialogs"
    xmlns:app="http://schemas.android.com/apk/res-auto">



    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/tvWarning"
        android:layout_width="@dimen/_55sdp"
        android:layout_height="@dimen/_55sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/sale_accspt"
        android:textColor="@color/o_delete_icon_color"
        android:textSize="@dimen/_20ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--=======================================================================================================-->

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_6sdp"
        android:gravity="center"
        android:text="@string/are_you_sure_to_complete_the_purchase"
        android:textAllCaps="false"
        android:textColor="@color/a_gray_color"
        android:textSize="@dimen/_15ssp"
        android:fontFamily="@font/poppins_medium"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/purchaseDialogText"
       />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnNo"
        android:layout_width="@dimen/_90sdp"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_14sdp"
        android:layout_marginStart="@dimen/_30sdp"
        android:background="@drawable/cancel_btn_selector"
        android:gravity="center"
        android:text="@string/a_cancel"
        android:textAllCaps="true"
        android:textColor="@color/o_base_color_app"
        android:textStyle="bold"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnYes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvMessage" />

    <!--=======================================================================================================-->

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnYes"
        android:layout_width="@dimen/_90sdp"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_40sdp"
        android:layout_marginBottom="@dimen/_14sdp"
        android:background="@drawable/yes_no_btn_selector"
        android:gravity="center"
        android:text="@string/o_yes"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvMessage" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/purchaseDialogText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/purchase_dialog"
        android:textStyle="bold"
        android:textSize="@dimen/_15ssp"
        android:textColor="@color/black_700"
        android:layout_marginTop="@dimen/_10ssp"
        app:layout_constraintBottom_toTopOf="@+id/tvMessage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWarning" />


</androidx.constraintlayout.widget.ConstraintLayout>