<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".ui.LoginActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgScreenHead"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:src="@drawable/register_t_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvScreenTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_45sdp"
        android:layout_marginTop="@dimen/_50sdp"
        android:text="@string/o_log_in"
        android:textColor="@color/white"
        android:textSize="@dimen/_19sdp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgLogoApp"
        android:layout_width="@dimen/_65sdp"
        android:layout_height="@dimen/_70sdp"
        android:layout_marginEnd="@dimen/_30sdp"
        android:layout_marginBottom="@dimen/_25sdp"
        android:textDirection="locale"
        app:layout_constraintBottom_toBottomOf="@+id/imgScreenHead"
        app:layout_constraintEnd_toEndOf="@+id/imgScreenHead"
        app:srcCompat="@drawable/logo_image" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgScreenHead">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/nestedLayoutItems"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_70sdp">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etEmailLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:hint="@string/b_email"
                app:boxStrokeColor="@color/a_gray_color"
                app:boxStrokeWidth="1.5dp"
                app:endIconMode="clear_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableStart="@drawable/email_icon"
                    android:drawablePadding="@dimen/_10sdp"
                    android:drawableTint="@color/black_700"
                    android:inputType="textEmailAddress"
                    android:maxLength="30"
                    android:padding="@dimen/_10sdp" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etPasswordLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:hint="@string/b_password"
                app:boxStrokeColor="@color/a_gray_color"
                app:boxStrokeWidth="1.5dp"
                app:endIconMode="password_toggle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etEmailLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableStart="@drawable/password_icon"
                    android:drawablePadding="@dimen/_10sdp"
                    android:drawableTint="@color/black_700"
                    android:inputType="textPassword"
                    android:maxLength="20"
                    android:padding="@dimen/_10sdp" />
            </com.google.android.material.textfield.TextInputLayout>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnConfirmLogin"
                style="@style/BaseStyleButton"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_50sdp"
                android:text="@string/b_log_in"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etPasswordLayout" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvForgetPassword"
                style="@style/Texts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/b_forget_password"
                android:textAllCaps="false"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/line"
                tools:layout_editor_absoluteY="629dp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvHaveAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_70sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:text="@string/b_don_t_have_an_account"
                android:textAllCaps="false"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnConfirmLogin" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:text="@string/b_sign_up"
                android:textAllCaps="false"
                android:textColor="@color/o_base_color_app"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintStart_toEndOf="@id/tvHaveAccount"
                app:layout_constraintTop_toBottomOf="@id/btnConfirmLogin" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/line"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_50sdp"
                android:layout_marginTop="@dimen/_6sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@drawable/line_shep_cuted"
                app:layout_constraintBottom_toTopOf="@+id/tvForgetPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvHaveAccount" />


            <ProgressBar
                android:id="@+id/progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminateTint="@color/o_base_color_app"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="@id/btnConfirmLogin"
                app:layout_constraintEnd_toEndOf="@id/btnConfirmLogin"
                app:layout_constraintStart_toStartOf="@id/btnConfirmLogin"
                app:layout_constraintTop_toTopOf="@id/btnConfirmLogin" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

