<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.OrdersFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgScreenHead"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_60sdp"
        android:scaleType="fitXY"
        android:src="@drawable/path_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvScreenTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a_orders"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_20ssp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imgScreenHead"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgSearchFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_10sdp"
        android:src="@drawable/filter_icon"
        android:tint="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/imgScreenHead"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/filterLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_43sdp"
        android:orientation="horizontal"
        android:padding="@dimen/_8sdp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgScreenHead">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnAllOrders"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_8sdp"
            android:layout_weight="1"
            android:background="@drawable/all_btn_o_selector"
            android:text="@string/all"
            android:textAllCaps="false"
            android:textSize="@dimen/_14ssp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnPending"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_8sdp"
            android:layout_weight="1"
            android:background="@drawable/pending_btn_o_selector"
            android:text="@string/pending"
            android:textColor="@color/a_brown_color"
            android:textAllCaps="false"
            android:textSize="@dimen/_14ssp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnComplete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_8sdp"
            android:layout_weight="1"
            android:background="@drawable/deleivered_btn_o_selector"
            android:text="@string/completed"
            android:textAllCaps="false"
            android:textColor="@color/a_green_color"
            android:textSize="@dimen/_14ssp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnOnWay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/on_way_btn_o_selector"
            android:text="@string/on_the_way"
            android:textColor="@color/profile_gray_color"
            android:textAllCaps="false"
            android:textSize="@dimen/_14ssp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_8sdp"
        android:fillViewport="true"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filterLinearLayout">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvOrders"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:nestedScrollingEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:listitem="@layout/item_status_order" />

            <ProgressBar
                android:id="@+id/progressLoadMore"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                android:indeterminateTint="@color/o_base_color_app"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rvOrders" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>


    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_50sdp"
        android:indeterminateTint="@color/o_base_color_app"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/nestedScrollView" />


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/noOrdersLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/nestedScrollView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical"
        android:visibility="invisible"
        >


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgNoOrders"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/no_orders"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvNoOrders"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_16ssp"
            android:text="@string/you_don_t_have_any_orders"
            android:textStyle="bold"
            android:textColor="@color/a_provider_color"
            android:gravity="center"
            android:layout_marginTop="@dimen/_16sdp"
            />

    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.constraintlayout.widget.ConstraintLayout>